creación de componente nav-bar y su maquetación. creación componente dashboard y maquetación. creación de nuevas rutas. las maquetaciones son básicas como punto de partida

--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -7,17 +7,20 @@
             <label class="form-label">Título</label>
             <input type="text" class="form-control" formControlName="titulo">
         </div>
-        <div class="mb-3">
-            <label class="form-label">Texto</label>
-            <input type="text" class="form-control" formControlName="texto">
+        <div class="input-group mb-3">
+            <span class="input-group-text">Texto</span>
+            <textarea aria-label="" class="form-control" formControlName="texto"></textarea>
         </div>
+
         <div class="mb-3">
             <label class="form-label">Imagen</label>
             <input type="text" class="form-control" formControlName="imagen">
         </div>
         <div class="mb-3">
-            <label class="form-label">Categoría</label>
-            <input type="text" class="form-control" formControlName="categoria">
+
+            <select class="form-select" aria-label="Small select example" formControlName="categoria">
+                <option selected>Elige una categoría</option>
+            </select>
         </div>
         <div class="mb-3">
             <label class="form-label">Fecha</label>
