datos del formulario se guargan en localstorage y se muestran en home

--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -19,16 +19,16 @@
         <div class="mb-3">
 
             <select class="form-select" aria-label="Small select example" formControlName="categoria">
-                <option selected>Elige una categoría</option>
+                <option>Elige una categoría</option>
             </select>
         </div>
         <div class="mb-3">
             <label class="form-label">Fecha</label>
-            <input type="text" class="form-control" formControlName="fecha">
+            <input type="date" class="form-control" formControlName="fecha">
         </div>
 
 
-        <input class="btn" type="submit">
+        <input class="btn" type="submit" value="Añadir">
 
     </form>
 </div>
