--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,11 +1,8 @@
-<header>
-    <nav-bar></nav-bar>
-</header>
 <main>
     <router-outlet></router-outlet>
     <div class="newPost">
         <h2>CUÉNTANOS TUS AVENTURAS</h2>
-        <button class="btn">Nuevo post</button>
+        <button class="btn mt-2" [routerLink]="['/new']">Nuevo post</button>
     </div>
     <post-list></post-list>
 </main>
