--- a/src/app/pages/post-list/post-list.component.css
+++ b/src/app/pages/post-list/post-list.component.css
@@ -2,3 +2,22 @@ h1 {
     text-align: center;
     margin-top: 20px;
 }
+
+.container {
+    position: relative;
+}
+
+select {
+    width: 200px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: goldenrod;
+    border-radius: 5px;
+}
+
+.posts {
+    display: flex;
+    margin-top: 40px;
+    gap: 10px;
+}
