--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,4 +5,5 @@
         <button class="btn mt-2" [routerLink]="['/new']">Nuevo post</button>
     </div>
     <post-list></post-list>
+    <news></news>
 </main>
