añado filtrado por id y ruta hacia el componente de cada post por id.filtrado por categoría funciona pero eliminando el id del interfaz categoria.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<header>
+<header class="container">
+    <h1 [routerLink]="['/home']">The Wanderlust Blog</h1>
     <nav-bar></nav-bar>
 </header>
 <router-outlet />
