--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
     <router-outlet></router-outlet>
     <div class="newPost">
         <h2>CUÉNTANOS TUS AVENTURAS</h2>
+        <h4>"Aquel viaje que no ha dejado huella en tu corazón jamás fue un viaje"</h4>
         <button class="btn mt-2" [routerLink]="['/new']">Nuevo post</button>
     </div>
     <post-list></post-list>
