--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,34 +1,21 @@
 <div class="container">
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
 
-            <a class="navbar-brand wander" href="#">The Wanderlust Blog</a>
-
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-link" [routerLink]="['/new']">Nuevo post</li>
 
-                    <li class="nav-link">Noticias</li>
-
-                    <li class="nav-item dropdown">
-
-                        <!--<ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>-->
-
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
+                    <li class="nav-link" [routerLink]="['/news']">Noticias</li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Búsqueda">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Búsqueda"
+                        (input)="onInput($event)">
                     <button class="btn btn-outline-success" type="submit">🔍</button>
                 </form>
             </div>
