--- a/src/app/pages/post-list/post-list.component.html
+++ b/src/app/pages/post-list/post-list.component.html
@@ -1,27 +1,31 @@
 <section class="container p-4">
 
     <h2 class="text-center">POSTS</h2>
-    <select name="" id="" class="dropdown-item nav-link p-2">
+    <select name="" id="" class="dropdown-item nav-link p-2" (change)="onChange($event)">
+        <option value="todas">Todas</option>
         @for(category of categories;track $index){
-        <option value="">{{category.titulo}}</option>
+        <option value="{{category.titulo.toLowerCase()}}">{{category.titulo}}</option>
         }
     </select>
-    <div class="row">
-        <div class="posts">
+    <div>
+        <div class="row column-gap-3  justify-content-between m-5 ">
             @for(post of posts;track $index){
-            <div class="card" style="width: 18rem;"><!--[routerLink]="['/post',post._id]"-->
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
+            <article class="card col-12 col-md-6 col-lg-5 col-xl-3 mb-5" [routerLink]="['/post',post._id]">
+                <img src="{{post.imagen}}" class="card-img-top">
+                <div class="card-body bg-light ">
                     <h5 class="card-title">{{post.titulo.toUpperCase()}}</h5>
-                    <p class="card-text">{{post.texto}}</p>
+                    <div class="text">
+                        <p class="card-text">{{post.texto}}</p>
+                    </div>
                     <p class="card-text">{{post.autor}}</p>
                     <p class="card-text"><strong>Autor</strong>{{post.autor}}</p>
                     <p class="card-text">{{post.fecha|date}}</p>
                     <p class="card-text"><strong>Categoría: </strong>{{post.categoria}}</p>
 
 
+
                 </div>
-            </div>
+            </article>
             }
         </div>
     </div>
