--- a/src/app/pages/post-view/post-view.component.html
+++ b/src/app/pages/post-view/post-view.component.html
@@ -1,1 +1,14 @@
-<p>post-view works!</p>
+<section class="container bg-light rounded mt-4 vh-100 p-4">
+
+    <h2 class="card-title">{{post?.titulo?.toUpperCase()}}</h2>
+    <div class="text">
+        <p class="card-text">{{post?.texto}}</p>
+    </div>
+    <p class="card-text">{{post?.autor}}</p>
+    <p class="card-text"><strong>Autor</strong>{{post?.autor}}</p>
+    <p class="card-text">{{post?.fecha}}</p>
+    <p class="card-text"><strong>Categoría: </strong>{{post?.categoria}}</p>
+
+
+
+</section>
