--- a/src/app/pages/post-view/post-view.component.html
+++ b/src/app/pages/post-view/post-view.component.html
@@ -8,6 +8,7 @@
     <p class="card-text"><strong>Autor</strong>{{post?.autor}}</p>
     <p class="card-text">{{post?.fecha}}</p>
     <p class="card-text"><strong>Categoría: </strong>{{post?.categoria}}</p>
+    <img [src]="post?.imagen" alt="hola">
 
 
 
