--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -6,10 +6,16 @@
         <div class="mb-3">
             <label class="form-label">Título</label>
             <input type="text" class="form-control" formControlName="titulo">
+            @if(checkError('titulo', 'required')){
+            <p class="error">El campo título es obligatorio</p>
+            }
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text">Texto</span>
             <textarea aria-label="" class="form-control" formControlName="texto"></textarea>
+            @if(checkError('titulo', 'required')){
+            <p class="error">El campo descripción es obligatorio</p>
+            }
         </div>
 
         <div class="mb-3">
@@ -19,7 +25,10 @@
                 <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4"
                     formControlName="imagen">
             </div>
-            <div class="form-text" id="basic-addon4">Imagen</div>
+            @if(checkError('imagen', 'required')){
+            <p class="error">Tienes que añadir una imagen del viaje</p>
+            }
+
         </div>
 
 
@@ -31,10 +40,16 @@
                 <option>{{category.titulo}}</option>
                 }
             </select>
+            @if(checkError('imagen', 'required')){
+            <p class="error">Tienes que escoger una categoría</p>
+            }
         </div>
         <div class="mb-3">
             <label class="form-label">Fecha</label>
             <input type="date" class="form-control" formControlName="fecha">
+            @if(checkError('imagen', 'required')){
+            <p class="error">Tienes que seleccionar una fecha</p>
+            }
         </div>
 
 
