--- a/src/app/pages/news/news.component.css
+++ b/src/app/pages/news/news.component.css
@@ -2,4 +2,11 @@ div {
     background-color: black;
     width: 100vw;
     height: 200px;
+    text-align: center;
+    padding: 20px;
+}
+
+h2 {
+    color: white;
+
 }
