--- a/src/app/pages/post-list/post-list.component.html
+++ b/src/app/pages/post-list/post-list.component.html
@@ -1,31 +1,34 @@
 <section class="container p-4">
-
-    <h2 class="text-center">POSTS</h2>
-    <select name="" id="" class="dropdown-item nav-link p-2" (change)="onChange($event)">
-        <option value="categorias">Categorías</option>
-        @for(category of categories;track $index){
-        <option value="{{category.titulo.toLowerCase()}}">{{category.titulo}}</option>
-        }
-    </select>
     <div>
-        <div class="row column-gap-3  justify-content-evenly m-5 ">
-            @for(post of posts;track $index){
-            <article class="card col-12 col-md-6 col-lg-5 col-xl-3 mb-5" [routerLink]="['/post',post._id]">
-                <img src={{post.imagen}} class="card-img-top">
-                <div class="card-body bg-light ">
-                    <h5 class="card-title">{{post.titulo.toUpperCase()}}</h5>
-                    <div class="text">
-                        <p class="card-text">{{post.texto}}</p>
-                    </div>
-                    <p class="card-text">{{post.autor}}</p>
-                    <p class="card-text">{{post.fecha|date}}</p>
-                    <p class="card-text"><strong>Categoría: </strong>{{post.categoria}}</p>
-
-
-
-                </div>
-            </article>
+        <h2 class="text-center">POSTS</h2>
+        <select name="" id="" class="dropdown-item nav-link p-2" (change)="onChange($event)">
+            <option value="categorias">Categorías</option>
+            @for(category of categories;track $index){
+            <option value="{{category.titulo.toLowerCase()}}">{{category.titulo}}</option>
             }
+        </select>
+    </div>
+    <div>
+        <div>
+            <div class="row column-gap-3  justify-content-evenly m-5 ">
+                @for(post of posts;track $index){
+                <article class="card col-12 col-md-6 col-lg-5 col-xl-3 mb-5" [routerLink]="['/post',post._id]">
+                    <img src={{post.imagen}} class="card-img-top">
+                    <div class="card-body bg-light ">
+                        <h5 class="card-title">{{post.titulo.toUpperCase()}}</h5>
+                        <div class="text">
+                            <p class="card-text">{{post.texto}}</p>
+                        </div>
+                        <p class="card-text">{{post.autor}}</p>
+                        <p class="card-text">{{post.fecha|date}}</p>
+                        <p class="card-text"><strong>Categoría: </strong>{{post.categoria}}</p>
+
+
+
+                    </div>
+                </article>
+                }
+            </div>
         </div>
     </div>
 </section>
