cambio algo de formato del form. meto los mensajes de error con swat y ngx-soner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <header class="container">
-    <h1 [routerLink]="['/home']">The Wanderlust Blog</h1>
+    <p [routerLink]="['/home']">The Wanderlust Blog</p>
     <nav-bar></nav-bar>
 </header>
-<router-outlet />
+<main>
+    <router-outlet />
+</main>
