--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,12 +3,13 @@ header {
     flex-wrap: wrap;
 }
 
-h1 {
+p {
     font-family: "Caveat", cursive;
     font-optical-sizing: auto;
     font-style: normal;
     width: 30%;
     cursor: pointer;
+    font-size: 250%;
 }
 
 nav-bar {
