--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,7 @@
-<main>
-    <router-outlet></router-outlet>
-    <div class="newPost">
-        <h2>CUÉNTANOS TUS AVENTURAS</h2>
-        <h4>"Aquel viaje que no ha dejado huella en tu corazón jamás fue un viaje"</h4>
-        <button class="btn mt-2" [routerLink]="['/new']">Nuevo post</button>
-    </div>
-    <post-list></post-list>
-    <news></news>
-</main>
+<div class="newPost">
+    <h1>CUÉNTANOS TUS AVENTURAS</h1>
+    <h4>"Aquel viaje que no ha dejado huella en tu corazón jamás fue un viaje"</h4>
+    <button class="btn btn-dark mt-2" [routerLink]="['/new']">Nuevo post</button>
+</div>
+<post-list></post-list>
+<news></news>
