--- a/src/app/pages/post-list/post-list.component.html
+++ b/src/app/pages/post-list/post-list.component.html
@@ -1,7 +1,7 @@
 <section class="container p-4">
     <div>
         <h2 class="text-center">POSTS</h2>
-        <select name="" id="" class="dropdown-item nav-link p-2" (change)="onChange($event)">
+        <select class="form-select " (change)="onChange($event)">
             <option value="categorias">Categorías</option>
             @for(category of categories;track $index){
             <option value="{{category.titulo.toLowerCase()}}">{{category.titulo}}</option>
@@ -10,9 +10,22 @@
     </div>
     <div>
         <div>
-            <div class="row column-gap-3  justify-content-evenly m-5 ">
+            <div class="row justify-content-between  m-5 ">
                 @for(post of posts;track $index){
-                <article class="card col-12 col-md-6 col-lg-5 col-xl-3 mb-5" [routerLink]="['/post',post._id]">
+                <article class="col-12 col-md-6 col-lg-5 col-xl-3 m-5 " [routerLink]="['/post',post._id]">
+                    <div class="card bg-light" style="width: 18rem;">
+                        <img src={{post.imagen}} class="card-img-top" alt="...">
+                        <div class="card-body p-1">
+                            <h3 class="card-text">{{post.titulo.toUpperCase()}}</h3>
+                        </div>
+                        <div class="by">
+                            <p>by {{post.autor}}</p>
+                            <p>{{post.fecha|date}}</p>
+                        </div>
+
+                    </div>
+                </article>
+                <!--<article class="card col-12 col-md-6 col-lg-5 col-xl-3 mb-5" >
                     <img src={{post.imagen}} class="card-img-top">
                     <div class="card-body bg-light ">
                         <h5 class="card-title">{{post.titulo.toUpperCase()}}</h5>
@@ -22,11 +35,8 @@
                         <p class="card-text">{{post.autor}}</p>
                         <p class="card-text">{{post.fecha|date}}</p>
                         <p class="card-text"><strong>Categoría: </strong>{{post.categoria}}</p>
-
-
-
                     </div>
-                </article>
+                </article>-->
                 }
             </div>
         </div>
