--- a/src/styles.css
+++ b/src/styles.css
@@ -3,13 +3,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Major+Mono+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Boldonse&display=swap');
 
-h2 {
+
+h1 {
     font-family: "Boldonse", system-ui;
     font-weight: 400;
     font-style: normal;
     font-size: 200%;
     letter-spacing: 5px;
+    color: white;
 }
+
+h2 {
+    font-family: "Boldonse", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
 
 h4 {
     font-family: "Amatic SC", sans-serif;
@@ -18,4 +27,5 @@ h4 {
     color: white;
     font-weight: lighter;
     margin-top: 15px;
+    font-size: 180%;
 }
