--- a/src/app/pages/post-view/post-view.component.html
+++ b/src/app/pages/post-view/post-view.component.html
@@ -1,18 +1,7 @@
 <section class="container bg-light rounded mt-4 vh-100 p-4">
-
+    <h4 class="card-text">{{post?.categoria}}</h4>
     <h2 class="card-title mb-4">{{post?.titulo?.toUpperCase()}}</h2>
-    <div class="text">
-        <p class="card-text">{{post?.texto}}</p>
-    </div>
-    <div class="props">
-
-        <p class="card-text"><strong>Autor: </strong>{{post?.autor}}</p>
-        <p class="card-text"><strong>Categoría: </strong>{{post?.categoria}}</p>
-        <p class="card-text"><strong>Fecha: </strong>{{post?.fecha}}</p>
-    </div>
+    <h5>By {{post?.autor}} | {{post?.fecha | date:'dd-MM-yyyy'}}</h5>
+    <p>{{post?.texto}}</p>
     <figure><img [src]="post?.imagen" alt="hola"></figure>
-
-
-
-
 </section>
