--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -9,3 +9,17 @@
     text-align: center;
 
 }
+
+h2 {
+    color: white
+}
+
+button {
+    font-size: 130%;
+
+    transition: .5s;
+
+    &:hover {
+        scale: 1.05;
+    }
+}
