--- a/src/app/pages/form/form.component.css
+++ b/src/app/pages/form/form.component.css
@@ -6,6 +6,19 @@
 form {
     width: 60%;
     margin: 0 auto;
+
+}
+
+@media(max-width:768px) {
+    form {
+        width: 90%;
+    }
+}
+
+@media(max-width:1004px) {
+    form {
+        width: 75%;
+    }
 }
 
 
@@ -22,19 +35,15 @@ h2 {
 
 .container {
     background-image: url(../../images/image\ copy\ 4.png);
-
     background-blend-mode: color-burn;
     background-repeat: no-repeat;
     background-size: content;
     background-position: center;
     background-size: 100%;
+    margin-bottom: 30px;
 }
 
-.fecha,
-select {
-    width: 40%;
-    margin: 0 auto;
-}
+
 
 span {
     text-align: left;
