--- a/src/app/pages/post-view/post-view.component.css
+++ b/src/app/pages/post-view/post-view.component.css
@@ -1,5 +1,14 @@
-.props {
-    margin-top: 20px;
-    display: flex;
-    gap: 20px;
+h2 {
+    text-align: center;
+}
+
+h5 {
+    text-align: center;
+}
+
+h4 {
+    color: black;
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 250%;
 }
