--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,20 @@
 <main>
     <router-outlet />
 </main>
-<footer>
+<footer class="fixed-bottom">
     <div class="container">
         <ul>
-            <li>Copyright&copy;2025 --</li>
-            <li class="wander"> The Wanderlust Blog </li>
-            <li> -- Aviso legal -</li>
-            <li>- Cookies</li>
+            <li>Copyright&copy;2025 -</li>
+            <li class="wander"> The Wanderlust Blog -</li>
+            <li>Aviso legal -</li>
+            <li>Cookies</li>
         </ul>
+        <div>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-tiktok"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+
+        </div>
     </div>
 </footer>
