--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -20,9 +20,8 @@
                             <p>{{post.fecha|date:'dd-MM-yyyy'}}</p>
                         </div>
                     </div>
-                    <!--<span class="badge text-bg-secondary">Nuevo</span>-->
                 </article>
-
                 }
-
-                <news></news>
+            </div>
+            <hr>
+            <news></news>
