--- a/src/app/pages/news/news.component.css
+++ b/src/app/pages/news/news.component.css
@@ -1,3 +1,48 @@
-div {
-    height: 100vh;
+.contenedor {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgb(238, 238, 241);
+    margin-top: 40px;
+}
+
+
+.noticias {
+    width: 70%;
+}
+
+
+
+.news,
+.patrocinados {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.card-img-top {
+    height: 90px;
+    width: 90px;
+    margin: 0 auto;
+    box-sizing: content-box;
+}
+
+.patrocinados {
+    width: 30%;
+}
+
+h2 {
+    color: black;
+    font-size: 120%;
+    text-align: center;
+    margin: 40px auto;
+}
+
+section {
+    margin-bottom: 80px;
+
+}
+
+article {
+    margin-bottom: 20px;
 }
