--- a/src/app/pages/post-list/post-list.component.css
+++ b/src/app/pages/post-list/post-list.component.css
@@ -1,13 +1,22 @@
+section {
+    margin-bottom: 80px;
+}
+
 select {
     width: 200px;
     margin-bottom: 20px;
-    background-color: goldenrod;
     border-radius: 5px;
+    border: 1px solid goldenrod;
+
+    &:hover {
+        scale: 1.05;
+    }
 }
 
 .card {
     position: relative;
     text-align: center;
+
 
 }
 
@@ -70,11 +79,3 @@ img {
     margin: 10px 0;
     position: relative;
 }
-
-/*span {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    background-color: red !important;
-    padding: 10px;
-}*/
