--- a/src/app/pages/post-view/post-view.component.css
+++ b/src/app/pages/post-view/post-view.component.css
@@ -1,14 +1,9 @@
-h2 {
+figure {
     text-align: center;
+    max-width: 700px;
 }
 
-h5 {
-    text-align: center;
-}
-
-h4 {
-    color: black;
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 250%;
+img {
+    width: 100%;
+    height: auto;
 }
